--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do-List Program</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles1.css" />
 
                     <!-- HTML IMPORT !-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
